# clintermission

./: .gitignore  README.md  setup.cfg  setup.py
clintermission/: __init__.py  climenu.py
examples/: basic_usage.py  cursorless.py  multiselect.py  simple1.py  simple2.py  theme1.py
