[metadata]
name = clintermission
version = 0.1.0
author = Sebastian Lohff
author-email = seba@someserver.de
home-page = https://git.someserver.de/seba/clintermission
description = Non-fullscreen commandline selection menu
long-description = file: README.md
platform = any
keywords = cli, menu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >= 3.5
packages = clintermission
setup_requires =
    setuptools > 30.4.0
install_requires =
    prompt-toolkit

[flake8]
max-line-length = 120
