[metadata]
name = clintermission
version = 0.3.1
author = Sebastian Lohff
author-email = seba@someserver.de
license = Apache-2.0
home-page = https://github.com/sebageek/clintermission
description = Non-fullscreen command-line selection menu
long-description = file: README.md
long-description-content-type = text/markdown
platform = any
keywords = cli, menu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >= 3.7
packages = clintermission
setup_requires =
    setuptools > 30.4.0
install_requires =
    prompt-toolkit > 3.0.3

[flake8]
max-line-length = 120
